Refactor code for newer Java features